Add observable resumable market data (#4)
